# NGO_Resume

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agents/: __init__.py
agents/interview_coach/: __init__.py  main.py
agents/job_market/: __init__.py  main.py
agents/learning_path/: __init__.py  main.py
agents/matching/: __init__.py  main.py
agents/ops_autocorrect/: __init__.py  main.py
agents/orchestrator/: __init__.py  main.py
agents/report_writer/: __init__.py  main.py
agents/resume_parser/: __init__.py  main.py
agents/skill_graph/: __init__.py  main.py
agents/web_api/: __init__.py  main.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx  styles.css
config/: agent-registry.sample.json
docs/: agent-deployment-model.md  architecture.md  deployment.md  operations.md
infra/cloudbuild/: cloudbuild.yaml  web-cloudbuild.yaml
infra/monitoring/: alert-policies.yaml  log-based-metrics.yaml
infra/terraform/: main.tf  variables.tf
scripts/: generate_agent_registry.py
tests/: test_agent_handlers.py  test_career_logic.py  test_jobs.py  test_ops_logic.py  test_orchestrator_client.py  test_planner.py  test_privacy_logging.py  test_web_api.py
