[project]
name = "skillbridge-ai"
version = "0.1.0"
description = "Loosely coupled A2A/MCP agent services for SkillBridge AI on Google Cloud."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "google-cloud-logging>=3.11.0",
  "google-cloud-pubsub>=2.23.0",
  "google-cloud-storage>=2.18.0",
  "httpx>=0.27.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-gcp-trace>=1.9.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "opentelemetry-instrumentation-requests>=0.48b0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.12",
  "python-json-logger>=2.0.7",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[tool.setuptools.packages.find]
where = ["packages", "."]
include = ["skillbridge_common*", "agents*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["skillbridge_common"]
